# DE0-Motor-Controller-Software

./: AS5048b.cpp  AS5048b.h  CMakeLists.txt  I2CBus.cpp  I2CBus.h  I2CDevice.cpp  I2CDevice.h  README.md  fpgaAddressComm.h  fpgaEncoder.h  heartbeat.cpp  main.cpp  main.h  main3.cpp  motorController.cpp  motorController.h  robotConfig.ini
include/DE0_Motor_Controller/: AS5048b.h  I2CDevice.h  fpgaAddressComm.h  fpgaEncoder.h  motorController.h
ini/: ini.c
ini_reader/: INIReader.cpp  INIReader.h  ini.h
main/: main.cpp  main.h
src/: AS5048b.cpp  I2CBus.cpp  I2CDevice.cpp  motorController.cpp
